# ET-hackathon

./: 1-RAG_IMPLEMENT.ipynb  README.md  app.py  main.py  pyproject.toml  requirements-clean.txt  requirements.txt  test_agent.py  test_all_agents.py  test_rag.py
Data_center_RAG/data/Architecture/: datacenter_design.txt.txt
Data_center_RAG/data/Commissioning/: commissioning_checklist.txt.txt
Data_center_RAG/data/Incident_Reports/: incident001.txt.txt
Data_center_RAG/data/RFIs/: rfi001.txt.txt
Data_center_RAG/data/Runbooks/: emergency_power_failure.txt.txt
Data_center_RAG/data/SOPs/: server_restart.txt.txt
Data_center_RAG/data/Schedules/: project_schedule.txt.txt
Data_center_RAG/data/Specifications/: cooling_specification.txt.txt  ups_specification.txt.txt
Data_center_RAG/data/Vendor_Submittals/: vendor_ups.txt.txt
backend/: test_agent.py
backend/agents/commissioning/: agent.py  prompts.py
backend/agents/compliance/: agent.py  prompts.py
backend/agents/drawing_review/: agent.py  prompts.py  (+1 more)
backend/app/: main.py
backend/config/: logging.py  settings.py
backend/core/: exceptions.py
backend/schemas/: agent_messages.py  chat.py  workflow_state.py
backend/services/: audit_service.py  document_classifier.py  session_service.py  telemetry_service.py  vision_llm.py  vision_processor.py
backend/tools/: drawing_tool.py  rag_tool.py
backend/workflows/: nodes.py  state.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
rag/: __init__.py  build_index.py  ingestion.py  llm.py  pipeline.py  retrieval.py
(+16 files in other folders)
